Fix describe config (should be done individually) Simplify return object from loop()
Signed-off-by: Gantigmaa Selenge <tina.selenge@gmail.com>